# data-delivery-tide

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml  spec.md
docs/: creating-lexicons.md  loading-dock-overview.md  setup-guide.md
docs/cleanup/: IMPLEMENTATION_DAG.md  cross-plan-re-review.md  cross-plan-review.md
docs/cleanup/17/: design.md
docs/cleanup/18/: design.md  phase_01.md
docs/cleanup/19/: design.md
docs/cleanup/20/: phase_01.md  phase_03.md  phase_04.md  phase_05.md
docs/cleanup/21/: design.md  phase_02.md  phase_03.md  phase_04.md  phase_05.md  test-requirements.md
docs/cleanup/22/: design.md  test-requirements.md
docs/cleanup/23/: design.md  phase_02.md  phase_03.md  phase_05.md
docs/cleanup/24/: design.md  phase_01.md
docs/cleanup/25/: design.md  phase_01.md  test-requirements.md
docs/cleanup/26/: phase_01.md
docs/cleanup/27/: design.md  phase_01.md
docs/cleanup/28/: design.md
docs/design-plans/: 2026-04-09-crawler.md  2026-04-09-qa-registry.md  2026-04-10-crawler-structured-traversal.md  2026-04-10-registry-auth.md  2026-04-14-event-stream.md  2026-04-14-lexicon-system.md  2026-04-14-sub-deliveries.md  2026-04-16-aggregation-design-notes.md  2026-04-16-sas-to-parquet-converter.md  2026-04-24-multi-file-converter.md
docs/implementation-plans/2026-04-09-crawler/: phase_01.md  phase_02.md  phase_03.md  phase_04.md  phase_05.md  test-requirements.md
docs/implementation-plans/2026-04-09-qa-registry/: phase_01.md  phase_02.md  phase_03.md  phase_04.md  phase_05.md  phase_06.md  test-requirements.md
docs/implementation-plans/2026-04-10-crawler-structured-traversal/: phase_01.md  phase_02.md  test-requirements.md
docs/implementation-plans/2026-04-10-registry-auth/: phase_01.md  phase_02.md  phase_03.md  test-requirements.md
docs/implementation-plans/2026-04-14-event-stream/: phase_01.md  phase_02.md  phase_03.md  phase_04.md  phase_05.md  test-requirements.md
docs/implementation-plans/2026-04-14-lexicon-system/: phase_01.md  phase_02.md  phase_03.md  phase_04.md  phase_05.md  phase_06.md  phase_07.md  phase_08.md  test-requirements.md
docs/implementation-plans/2026-04-14-sub-deliveries/: phase_01.md  phase_02.md  phase_03.md  test-requirements.md
docs/project/: DAG.md
docs/project/18/: test-requirements.md
docs/test-plans/: 2026-04-09-crawler.md  2026-04-09-qa-registry.md  2026-04-10-crawler-structured-traversal.md  2026-04-10-registry-auth.md  2026-04-14-event-stream.md  2026-04-14-lexicon-system.md  2026-04-14-sub-deliveries.md  2026-04-16-sas-to-parquet-converter.md  2026-04-24-multi-file-converter.md  human-test-plan.md
pipeline/: config.json
pipeline/lexicons/: lexicon.schema.json
pipeline/scripts/: ensure_converter.sh  ensure_registry.sh
src/pipeline/: auth_cli.py  config.py  json_logging.py
tests/: conftest.py  test_auth_cli.py  test_config.py  test_end_to_end_converter.py  test_json_logging.py  test_no_hardcoded_qa.py
tests/converter/: conftest.py  test_classify.py  test_cli.py  test_convert.py  test_daemon.py  test_engine.py  test_http.py
tests/crawler/: conftest.py  test_fingerprint.py  test_http.py  test_main.py  test_manifest.py  test_parser.py
tests/events/: test_consumer.py
tests/lexicons/: conftest.py  test_loader.py  test_qa_hook.py
tests/registry_api/: test_auth.py  test_db.py  test_events.py  test_models.py  test_routes.py
(+70 files in other folders)
