[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pipeline"
version = "0.1.0"
requires-python = ">=3.11"

[project.optional-dependencies]
registry = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.34,<1",
]
converter = [
    "pyreadstat>=1.2,<2",
    "pyarrow>=18,<19",
    "pandas>=2,<3",
]
consumer = [
    "websockets>=16,<17",
    "httpx>=0.28,<1",
]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.23,<1",
    "httpx>=0.28,<1",
]

[project.scripts]
registry-api = "pipeline.registry_api.main:run"
registry-auth = "pipeline.auth_cli:main"
registry-convert = "pipeline.converter.cli:main"
registry-convert-daemon = "pipeline.converter.daemon:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: tests that hit the filesystem or network",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pipeline"]
