[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pipeline"
version = "0.1.0"
requires-python = ">=3.11"

[project.optional-dependencies]
registry = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.34,<1",
]
converter = [
    "pyreadstat>=1.2,<2",
    "pyarrow>=18,<19",
    "pandas>=2,<3",
]
consumer = [
    "websockets>=16,<17",
    "httpx>=0.28,<1",
]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.23,<1",
    "httpx>=0.28,<1",
    "ruff>=0.15,<1",
    "mypy>=1.10,<2",
]

[project.scripts]
registry-api = "pipeline.registry_api.main:run"
registry-auth = "pipeline.auth_cli:main"
registry-convert = "pipeline.converter.cli:main"
registry-convert-daemon = "pipeline.converter.daemon:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: tests that hit the filesystem or network",
]

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = [
    ".worktrees",
    "build",
    "dist",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "TCH"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["E501", "SIM117", "E402", "B904", "SIM105", "SIM401", "B905", "TC001", "F841"]
"src/pipeline/registry_api/db.py" = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/pipeline"]

[[tool.mypy.overrides]]
module = ["pandas", "pandas.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["pyarrow", "pyarrow.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["pyreadstat", "pyreadstat.*"]
ignore_missing_imports = true

[tool.hatch.build.targets.wheel]
packages = ["src/pipeline"]
